fix: change directory tmux plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -118,7 +118,8 @@ set -g @tpm_plugins '\
     tmux-plugins/tmux-battery   \
 '
 # Initialize tpm
-run-shell ~/.tmux/tpm/tpm
+if "test -d ~/.tmux/plugins/tpm/tpm" "run-shell ~/.tmux/plugins/tpm/tpm"
+
 
 #-----  logging -----#
 # C-b C-p Start logging.
