add: update cheatsheets

--- a/zsh/cheatsheets/command-cheat.conf
+++ b/zsh/cheatsheets/command-cheat.conf
@@ -1,1 +1,3 @@
 du -d depth # depth値の深さまで表示する
+find . -name '*.cpp' | xargs wc -l # 行数カウンタ
+find . -name '*.cpp' -type f | xargs grep -Ev '^[[:space:]]*((/?\*.*/?)|(//.*))$' | wc -l # 行数カウンタ(空行無視)
