--- a/zsh/cheatsheets/git-cheat.conf
+++ b/zsh/cheatsheets/git-cheat.conf
@@ -4,6 +4,7 @@ git branch <branch> <起点>  # <起点>からブランチを作る
 git checkout <branch>       # <branch>に切り替え
 git push origin <branch>    # ローカルのブランチをリモートにpush
 git checkout -b <local branch> origin/<remote branch>    # リモートのブランチをとってくる
+git checkout -t origin/<remote branch>                   # リモートのブランチをとってくる
 git reset HEAD hoge/hoge.c; git checkout hoge/hoge.c     # git rmからの復活
 git reset Dropbox/**/*~     # 末尾が~のファイルのステージングの取り消し(zsh)
 git rm --cached <filename>  # ローカルのファイルは消さずに管理から外す
