--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,7 @@ set -g base-index 1
 set -g default-terminal "screen-256color"
 
 # バックスクロール行数
-set-option -g history-limit 10000000
+set-option -g history-limit 20000
 
 # shell
 if "test -d /usr/bin/zsh" "set-option -g default-shell /usr/bin/zsh"
@@ -122,9 +122,9 @@ if "test -d ~/.tmux/plugins/tpm/tpm" "run-shell ~/.tmux/plugins/tpm/tpm"
 
 
 #-----  logging -----#
-# C-b C-p Start logging.
-bind-key C-p pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%H%%M%%S\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S).log; done "' \; display-message "Logging start."
-# C-b C-o Stop logging
-bind-key C-o pipe-pane \; display-message "Logging end."
-# C-b v Open new window. Logging always. (-n is set window name.)
-bind-key v new-window -n 'logging...' \; pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%H%%M%%S\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S).log; done "'
+# v Start logging.
+bind-key v  pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%H%%M%%S\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S).log; done "' \; display-message "Logging start."
+# C-v C-o Stop logging
+bind-key C-v pipe-pane \; display-message "Logging end."
+# M-v Open new window. Logging always. (-n is set window name.)
+bind-key M-v new-window -n 'logging...' \; pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%H%%M%%S\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S).log; done "'
