--- a/zsh/cheatsheets/tmux-cheat.conf
+++ b/zsh/cheatsheets/tmux-cheat.conf
@@ -22,5 +22,7 @@ C-t C-c     #新規window home
 C-t Alt-s   #session-save
 C-t Alt-r   #session-restore
 
+:source-file ~/.tmux.conf # config file reload
+
 $ tmux a -d # デタッチしてからアタッチ（画面がリサイズされる）
 $ prefix S-i # tpm インストール
