--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ bind p paste-buffer
 # copy mode
 bind C-Space copy-mode
 
+# clear history
+bind C-\ clear-history
 
 # \ でペインを縦分割 - でペインを横分割
 bind \ split-window -h -c "#{pane_current_path}"
