--- a/tmux.conf
+++ b/tmux.conf
@@ -118,7 +118,7 @@ set -g @tpm_plugins '\
     tmux-plugins/tmux-battery   \
 '
 # Initialize tpm
-if "test -d ~/.tmux/plugins/tpm/tpm" "run-shell ~/.tmux/plugins/tpm/tpm"
+run-shell '~/.tmux/plugins/tpm/tpm'
 
 
 #-----  logging -----#
