cheatsheet: Update command

--- a/zsh/cheatsheets/command-cheat.conf
+++ b/zsh/cheatsheets/command-cheat.conf
@@ -2,3 +2,4 @@ du -d depth # depth値の深さまで表示する
 find . -name '*.cpp' | xargs wc -l # 行数カウンタ
 find . -name '*.cpp' -type f | xargs grep -Ev '^[[:space:]]*((/?\*.*/?)|(//.*))$' | wc -l # 行数カウンタ(空行無視)
 tar Jxf <*.tar.xz> # xzファイルの解凍
+/usr/lib/mozc/mozc_tool -mode=config_dialog # mozc gui config
