tmux: Change blue by current window

--- a/tmux.conf
+++ b/tmux.conf
@@ -92,9 +92,8 @@ setw -g window-status-bg default
 # setw -g window-status-attr dim
 
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg green
-setw -g window-status-current-attr bright
+setw -g window-status-current-fg black
+setw -g window-status-current-bg "#87CEFA"
 
 # コマンドラインの色を設定する
 # set -g message-fg white
