--- a/vim/neobundle.toml
+++ b/vim/neobundle.toml
@@ -1,7 +1,4 @@
 [[plugins]]
-repository = 'Shougo/neobundle.vim'
-
-[[plugins]]
 repository = 'Shougo/vimproc.vim'
     [plugins.build]
     windows = 'tools\\update-dll-mingw'
@@ -9,20 +6,14 @@ repository = 'Shougo/vimproc.vim'
     mac     = 'make -f make_mac.mak'
     unix    = 'make -f make_unix.mak'
 
-[[plugins]]
-repository = 'rhysd/accelerated-jk'
-
-[[plugins]]
-repository = 'jiangmiao/auto-pairs'
-
-[[plugins]]
-repository = 'terryma/vim-expand-region'
-
 # complete
 [[plugins]]
 repository = 'Shougo/neocomplete.vim'
 depends    = 'Shougo/context_filetype.vim'
 insert     = 1
+    [[plugins]]
+    repository = 'Shougo/neoinclude.vim'
+    depends    = 'Shougo/neocomplete.vim'
 
 [[plugins]]
 repository = 'Shougo/neosnippet.vim'
@@ -38,57 +29,27 @@ depends    = 'Shougo/neomru.vim'
     [plugins.commands]
     name     = 'Unite'
     complete = 'customlist,unite#complete_source'
+    [[plugins]]
+    repository = 'Shougo/neoyank.vim'
+    depends    = 'Shougo/unite.vim'
 
 [[plugins]]
 repository = 'Shougo/unite-outline'
-
-# TOML
-[[plugins]]
-repository = 'cespare/vim-toml'
-filetypes  = 'toml'
-
-# File tree view
-[[plugins]]
-repository = 'scrooloose/nerdtree'
-    [plugins.commands]
-    name = 'NERDTreeToggle'
-
-# file swap
-[[plugins]]
-repository = 'koara-local/next-alter.vim'
-filetypes  =  ['c', 'cpp']
 
 # MOTION
 [[plugins]]
 repository = 'rhysd/clever-f.vim'
 
+[[plugins]]
+repository = 'jiangmiao/auto-pairs'
+
+[[plugins]]
+repository = 'terryma/vim-expand-region'
+
 # COMMENT OUT
 [[plugins]]
 repository = 'tyru/caw.vim'
-mappings = '<Plug>'
-
-# GIT
-[[plugins]]
-repository = 'tpope/vim-fugitive'
-
-[[plugins]]
-repository = 'airblade/vim-gitgutter'
-
-[[plugins]]
-repository = 'rhysd/committia.vim'
-
-[[plugins]]
-repository = 'cohama/agit.vim'
-
-[[plugins]]
-repository = 'AndrewRadev/gapply.vim'
-
-# QUICKFIX
-[[plugins]]
-repository = 'dannyob/quickfixstatus'
-
-[[plugins]]
-repository = 'cohama/vim-hier'
+mappings   = '<Plug>'
 
 # SEARCH
 [[plugins]]
@@ -98,9 +59,21 @@ mappings = [['x', '*'], ['x' , '#'], ['x', 'g*'], ['x', 'g#']]
 [[plugins]]
 repository = 'haya14busa/incsearch.vim'
 
-# GTAGS
+# GIT
 [[plugins]]
-repository = '5t111111/alt-gtags.vim'
+repository = 'tpope/vim-fugitive'
+
+[[plugins]]
+repository = 'airblade/vim-gitgutter'
+
+[[plugins]]
+repository = 'jreybert/vimagit'
+
+[[plugins]]
+repository = 'rhysd/committia.vim'
+
+[[plugins]]
+repository = 'AndrewRadev/gapply.vim'
 
 # SYNTAX CHECK
 [[plugins]]
@@ -110,60 +83,6 @@ repository = 'scrooloose/syntastic'
 [[plugins]]
 repository = 'itchyny/lightline.vim'
 
-# QuickRun
+# COLOR
 [[plugins]]
-repository = 'thinca/vim-quickrun'
-
-# C/C++
-[[plugins]]
-repository = 'Rip-Rip/clang_complete'
-filetypes  =  ['c', 'cpp']
-
-# Go
-[[plugins]]
-repository = 'fatih/vim-go'
-
-# QML
-[[plugins]]
-repository = 'peterhoeg/vim-qml'
-filetypes  = 'qml'
-
-# JSON
-[[plugins]]
-repository = 'elzr/vim-json'
-filetypes  = 'json'
-
-# Open CL (*.cl)
-[[plugins]]
-repository = 'frasercrmck/opencl.vim'
-filetypes  = 'opencl'
-
-# Open GL
-[[plugins]]
-repository = 'koara-local/opengl.vim'
-lazy = 1
-
-# GLSL
-[[plugins]]
-repository = 'beyondmarc/glsl.vim'
-
-# wayland
-[[plugins]]
-repository = 'koara-local/vim-wayland'
-filetypes  =  ['c', 'cpp']
-
-# python
-[[plugins]]
-repository = 'davidhalter/jedi-vim'
-filetypes  = 'python'
-    [plugins.build]
-    others = 'git submodule update --init'
-
-# Markdown
-[[plugins]]
-repository = 'kannokanno/previm'
-filetypes  = 'markdown'
-
-[[plugins]]
-repository = 'tyru/open-browser.vim'
-filetypes  = 'markdown'
+repository = 'w0ng/vim-hybrid'
