--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -65,6 +65,12 @@ nnoremap <silent> <Space>uy :<C-u>Unite history/yank<CR>
 nnoremap <silent> <Space>ua :Unite -start-insert file_rec/async:!<CR>
 nnoremap <silent> <Space>ug :Unite -start-insert file_rec/git<CR>
 
+nnoremap <silent> <Space>g  :<C-u>Unite grep:. -buffer-name=search-buffer<CR>
+if executable('hw')
+  let g:unite_source_grep_command = 'hw'
+  let g:unite_source_grep_default_opts = '--no-group --no-color'
+  let g:unite_source_grep_recursive_opt = ''
+endif
 '''
 
 [[plugins]]
@@ -177,5 +183,5 @@ nnoremap <silent> <Space>gr :<C-u>Unite gtags/ref<CR>
 " lists definitions of a word. (It executes global -qd -e <pattern> in internal.)
 nnoremap <silent> <Space>gd :<C-u>Unite gtags/def<CR>
 " lists grep result of a word. (It executes global -qg -e <pattern> in internal.)
-nnoremap <silent> <Space>gg :<C-u>Unite gtags/grep<CR>
+" nnoremap <silent> <Space>gg :<C-u>Unite gtags/grep<CR>
 '''
