zsh: Fix git cheat sheet

--- a/zsh/cheatsheets/git-cheat.conf
+++ b/zsh/cheatsheets/git-cheat.conf
@@ -21,7 +21,7 @@ git push --delete origin <remote branch>
 git log --oneline --graph --decorate --all
 
 # Commiter と Author をすべて変更
-git filter-branch -f --env-filter "GIT_AUTHOR_NAME='sea_mountain'; GIT_AUTHOR_EMAIL='valid_email@example.com'; GIT_COMMITTER_NAME='sea_mountain'; GIT_COMMITTER_EMAIL='valid_email@example.com';" HEAD
+NAME="" EM="" git filter-branch -f --env-filter 'GIT_AUTHOR_NAME="${NAME}"; GIT_AUTHOR_EMAIL="${EM}"; GIT_COMMITTER_NAME="${NAME}"; GIT_COMMITTER_EMAIL="${EM}";' HEAD
 
 # 上記ですべて変更した場合のbackupを消す
 git update-ref -d refs/original/refs/heads/master
