--- a/tmux.conf
+++ b/tmux.conf
@@ -45,7 +45,7 @@ set -sg escape-time 0
 set -g base-index 1
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+set -g default-terminal 'xterm-256color'
 
 # バックスクロール行数
 set-option -g history-limit 20000
