--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -78,7 +78,7 @@ repo = 'Shougo/neomru.vim'
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-hook_add = '''
+hook_source = '''
 let g:deoplete#enable_at_startup = 1
 '''
 
