neovim: Add config for deoplate

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -80,6 +80,22 @@ repo = 'Shougo/neomru.vim'
 repo = 'Shougo/deoplete.nvim'
 hook_source = '''
 let g:deoplete#enable_at_startup = 1
+let g:deoplete#enable_smart_case = 1
+
+let g:clang_complete_auto = 0
+let g:clang_auto_select = 0
+let g:clang_omnicppcomplete_compliance = 0
+
+inoremap <expr><C-h> deoplete#smart_close_popup()."\<C-h>"
+inoremap <expr><BS>  deoplete#smart_close_popup()."\<C-h>"
+inoremap <expr><C-g> deoplete#cancel_popup()."\<C-h>"
+
+" <CR>: close popup and save indent.
+inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
+function! s:my_cr_function() abort
+  return deoplete#close_popup() . "\<CR>"
+endfunction
+
 '''
 on_i = 1
 
