--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -207,13 +207,23 @@ nnoremap <silent> <Space>gd :<C-u>Unite gtags/def<CR>
 '''
 
 [[plugins]]
-repo = 'peterhoeg/vim-qml'
-on_ft = 'qml'
-
-[[plugins]]
 repo = 'haya14busa/incsearch.vim'
 hook_add = '''
 map /  <Plug>(incsearch-forward)
 map ?  <Plug>(incsearch-backward)
 map g/ <Plug>(incsearch-stay)
 '''
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
+hook_add = '''
+let g:neoyank#limit = 50
+'''
+
+[[plugins]]
+repo = 'tyru/open-browser.vim'
+on_ft = 'markdown'
+
+[[plugins]]
+repo = 'kannokanno/previm'
+on_ft = 'markdown'
