--- a/nvim/autocompletion.toml
+++ b/nvim/autocompletion.toml
@@ -1,3 +1,13 @@
 [[plugins]]
 repo = 'zchee/deoplete-jedi'
 on_ft = ['python']
+
+[[plugins]]
+repo = 'osyo-manga/vim-monster'
+on_ft = ['ruby']
+hook_source = '''
+let g:monster#completion#rcodetools#backend = "async_rct_complete"
+let g:deoplete#sources#omni#input_patterns = {
+\   "ruby" : '[^. *\t]\.\w*\|\h\w*::',
+\}
+'''
