--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -213,11 +213,11 @@ endfunction
 repo = 'hewes/unite-gtags'
 hook_add = '''
 " lists references of a word. (It executes global -qrs -e <pattern> in internal.)
-nnoremap <silent> <Space>gr :<C-u>Unite gtags/ref<CR>
+nnoremap <silent> <Space>gr :<C-u>Unite gtags/ref -auto-preview <CR>
 " lists definitions of a word. (It executes global -qd -e <pattern> in internal.)
-nnoremap <silent> <Space>gd :<C-u>Unite gtags/def<CR>
+nnoremap <silent> <Space>gd :<C-u>Unite gtags/def -auto-preview <CR>
 " lists grep result of a word. (It executes global -qg -e <pattern> in internal.)
-" nnoremap <silent> <Space>gg :<C-u>Unite gtags/grep<CR>
+" nnoremap <silent> <Space>gg :<C-u>Unite gtags/grep -auto-preview <CR>
 '''
 
 [[plugins]]
