--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -214,6 +214,8 @@ augroup END
 function! s:vimfiler_my_settings()
     nmap <buffer> q <Plug>(vimfiler_hide)
     nmap <buffer> Q <Plug>(vimfiler_exit)
+    nnoremap <silent><buffer><expr> v vimfiler#do_switch_action('vsplit')
+    nnoremap <silent><buffer><expr> s vimfiler#do_switch_action('split')
     nmap <buffer> <C-j> <C-w>j
     nmap <buffer> <C-k> <C-w>k
     nmap <buffer> <C-h> <C-w>h
