--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -225,6 +225,7 @@ endfunction
 
 [[plugins]]
 repo = 'hewes/unite-gtags'
+on_ft = ['python']
 hook_add = '''
 " lists references of a word. (It executes global -qrs -e <pattern> in internal.)
 nnoremap <silent> <Space>gr :<C-u>Unite gtags/ref -auto-preview <CR>
@@ -232,6 +233,36 @@ nnoremap <silent> <Space>gr :<C-u>Unite gtags/ref -auto-preview <CR>
 nnoremap <silent> <Space>gd :<C-u>Unite gtags/def -auto-preview <CR>
 " lists grep result of a word. (It executes global -qg -e <pattern> in internal.)
 " nnoremap <silent> <Space>gg :<C-u>Unite gtags/grep -auto-preview <CR>
+'''
+
+[[plugins]]
+repo = 'yuu3/vim-rtags'
+on_ft = ['c', 'cpp']
+hook_add = '''
+function! SetupNeocomleteForCppWithRtags()
+    " Enable heavy omni completion.
+    setlocal omnifunc=RtagsCompleteFunc
+
+    if !exists('g:neocomplete#sources#omni#input_patterns')
+        let g:neocomplete#sources#omni#input_patterns = {}
+    endif
+    let l:cpp_patterns='[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
+    let g:neocomplete#sources#omni#input_patterns.cpp = l:cpp_patterns
+    set completeopt+=longest,menuone
+endfunction
+
+autocmd FileType cpp,c call SetupNeocomleteForCppWithRtags()
+set completefunc=RtagsCompleteFunc
+
+let g:rtagsUseDefaultMappings = 0
+let g:rtagsUseLocationList = 0
+
+" ref
+nnoremap <silent> <Space>gr :<C-u>Unite<Space>rtags/references<CR>
+" def
+nnoremap <silent> <Space>gd :call rtags#JumpTo(g:SAME_WINDOW)<CR>
+" jump
+nnoremap <silent> <Space>gg :call rtags#JumpToParent()<CR>
 '''
 
 [[plugins]]
