--- a/nvim/autocompletion.toml
+++ b/nvim/autocompletion.toml
@@ -21,7 +21,7 @@ on_ft = ['h', 'c', 'hpp', 'cpp', 'cc']
 hook_add = '''
 if has('unix')
     let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-3.8/lib/libclang.so'
-    let g:deoplete#sources#clang#clang_header =  '/usr/include/llvm-3.8/llvm'
+    let g:deoplete#sources#clang#clang_header =  '/usr/lib/clang/3.8'
 endif
 if has('mac')
     let g:deoplete#sources#clang#libclang_path = '/usr/local/Cellar/llvm/3.6.2/lib/libclang.dylib'
