--- a/tmux.conf
+++ b/tmux.conf
@@ -51,10 +51,9 @@ set -g default-terminal 'xterm-256color'
 set-option -g history-limit 20000
 
 # shell
-if "test -d /usr/bin/zsh" "set-option -g default-shell /usr/bin/zsh"
-if "test -d /usr/bin/zsh" "set-option -g default-command /usr/bin/zsh"
-if "test -d /usr/local/bin/zsh" "set-option -g default-shell /usr/local/bin/zsh"
-if "test -d /usr/local/bin/zsh" "set-option -g default-command /usr/local/bin/zsh"
+set -g default-shell $SHELL
+# Use rettach when use macOS
+if "test -d /usr/local/bin/zsh" "set-option -g default-command reattach-to-user-namespace -l ${SHELL}"
 
 # マウス操作を有効にする
 #set -g mode-mouse on
