--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ set -g status-bg black
 # set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
 # 右パネルを設定する
 set -g status-right-length 90
-set -g status-right "#[fg=white] #(whoami)@#h #{battery_percentage} [%Y-%m-%d(%a)%H:%M]"
+set -g status-right "#[fg=white] #(whoami)@#h [#{battery_icon}:#{battery_percentage}] [%Y-%m-%d(%a)%H:%M]"
 
 # リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
