zsh: :+1: Update tmux cheetsheet

--- a/zsh/cheatsheets/tmux-cheat.conf
+++ b/zsh/cheatsheets/tmux-cheat.conf
@@ -25,4 +25,6 @@ C-t Alt-r   #session-restore
 :source-file ~/.tmux.conf # config file reload
 
 $ tmux a -d # デタッチしてからアタッチ（画面がリサイズされる）
-$ prefix S-i # tpm インストール
+prefix S-i # tpm インストール
+
+prefix + # tmux-yank
