--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ set-option -g history-limit 20000
 # shell
 set -g default-shell $SHELL
 # Use rettach when use macOS
-if "test -d /usr/local/bin/zsh" "set-option -g default-command reattach-to-user-namespace -l ${SHELL}"
+set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l ${SHELL}"
 
 # マウス操作を有効にする
 #set -g mode-mouse on
