nvim: vim-qt is not support qml

--- a/nvim/syntax.toml
+++ b/nvim/syntax.toml
@@ -23,7 +23,7 @@ on_ft = ['c', 'cpp']
 
 [[plugins]]
 repo = 'Townk/vim-qt'
-on_ft = ['c', 'cpp', 'qml']
+on_ft = ['c', 'cpp']
 
 [[plugins]]
 repo = 'peterhoeg/vim-qml'
