tmux: We can send prefix when Nested tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 set -g prefix C-t
 unbind c-b
 
+# send the prefix to client inside window
+bind-key c-t send-prefix
+
 # [p]貼り付け
 bind p paste-buffer
 
