--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -147,3 +147,15 @@ on_ft = 'markdown'
 
 [[plugins]]
 repo = 'Shougo/echodoc'
+
+[[plugins]]
+repo = 'fuenor/qfixhowm'
+hook_add = '''
+let QFixHowm_Key = 'g'
+
+let howm_dir          = '~/Dropbox/howm'
+let howm_filename     = '%Y/%m/%Y-%m-%dT%H%M%S.txt'
+let howm_fileencoding = 'utf-8'
+let howm_fileformat   = 'unix'
+let QFixHowm_FileType = 'markdown'
+'''
