zsh: cleanup cheat-cheet

--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -14,3 +14,10 @@ zmv -n '(*)-(*)' '${1}-$(printf "%02d" ${2})'
 find . -name \*hoge\* -executable -type f # 実行ファイルのみ検索
 ulimit -c unlimited             # コアダンプ時にcoreを吐かせる(容量は無制限)
 sudo screen /dev/device 115200  # screen コマンドでシリアル通信 // 切断は C-a k
+
+wget $URL -O - |tar xzf -
+du -d depth # depth値の深さまで表示する
+find . -name '*.cpp' | xargs wc -l # 行数カウンタ
+find . -name '*.cpp' -type f | xargs grep -Ev '^[[:space:]]*((/?\*.*/?)|(//.*))$' | wc -l # 行数カウンタ(空行無視)
+tar Jxf <*.tar.xz> # xzファイルの解凍
+/usr/lib/mozc/mozc_tool -mode=config_dialog # mozc gui config
