--- a/zsh/cheatsheets/tmux-cheat.conf
+++ b/zsh/cheatsheets/tmux-cheat.conf
@@ -28,3 +28,15 @@ $ tmux a -d # デタッチしてからアタッチ（画面がリサイズされ
 prefix S-i # tpm インストール
 
 prefix + # tmux-yank
+
+--- screen
+C-j ?         # help
+C-j c         # 新規スクリーン作成
+C-j k         # スクリーン削除
+C-j [Esc]     # コピーモード
+[Space]       # 範囲選択開始(コピーモード)
+[Enter]       # コピー(コピーモード)
+[Esc]         # コピーモード終了(コピーモード)
+C-j ]         # ペースト
+C-j A         # スクリーンに名前を付ける
+C-j z         # サスペンド
