--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,7 @@ set -sg escape-time 0
 set -g base-index 1
 
 # 256色端末を使用する
-set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-256color'
 
 # バックスクロール行数
 set-option -g history-limit 20000
