--- a/nvim/syntax.toml
+++ b/nvim/syntax.toml
@@ -13,7 +13,7 @@ on_ft = 'json'
 [[plugins]]
 repo = 'plasticboy/vim-markdown'
 on_ft = 'markdown'
-hook_add = '''
+hook_post_source = '''
 let g:vim_markdown_folding_disabled = 1
 '''
 
@@ -32,7 +32,7 @@ on_ft = 'qml'
 [[plugins]]
 repo = 'fatih/vim-go'
 on_ft = 'go'
-source_add = '''
+hook_post_source = '''
 set noexpandtab
 set shiftwidth=8
 set softtabstop=8
