zsh: Add lz4 cheat-cheet

--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -21,3 +21,5 @@ find . -name '*.cpp' | xargs wc -l # 行数カウンタ
 find . -name '*.cpp' -type f | xargs grep -Ev '^[[:space:]]*((/?\*.*/?)|(//.*))$' | wc -l # 行数カウンタ(空行無視)
 tar Jxf <*.tar.xz> # xzファイルの解凍
 /usr/lib/mozc/mozc_tool -mode=config_dialog # mozc gui config
+tar cf - . |lz4 - hoge.tar.lz4 # need `cd path/to/dir`
+lz4 -d hoge.tar.lz4 | tar xf - -C hoge
