--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -23,3 +23,4 @@ tar Jxf <*.tar.xz> # xzファイルの解凍
 /usr/lib/mozc/mozc_tool -mode=config_dialog # mozc gui config
 tar cf - . |lz4 - hoge.tar.lz4 # need `cd path/to/dir`
 lz4 -d hoge.tar.lz4 | tar xf - -C hoge
+rsync -ru --ignore-existing $SRC $DEST
