nvim: Update llvm clang version 4.0

--- a/nvim/lang.toml
+++ b/nvim/lang.toml
@@ -45,8 +45,8 @@ repo = 'zchee/deoplete-clang'
 on_ft = ['h', 'c', 'hpp', 'cpp', 'cc']
 hook_add = '''
 if has('unix')
-    let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-3.8/lib/libclang.so'
-    let g:deoplete#sources#clang#clang_header =  '/usr/lib/clang/3.8'
+    let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-4.0/lib/libclang.so.1'
+    let g:deoplete#sources#clang#clang_header =  '/usr/lib/clang/4.0'
 endif
 if has('mac')
     let g:deoplete#sources#clang#libclang_path = '/usr/local/Cellar/llvm/3.6.2/lib/libclang.dylib'
