--- a/nvim/git.toml
+++ b/nvim/git.toml
@@ -3,7 +3,7 @@ repo = 'airblade/vim-gitgutter'
 hook_add  = '''
 let g:rooter_disable_map = 1
 let g:rooter_change_directory_for_non_project_files = 1
-set signcolumn=yes
+let g:gitgutter_sign_column_always = 1
 let g:gitgutter_sign_added = '✚'
 let g:gitgutter_sign_modified = '➜'
 let g:gitgutter_sign_removed = '_'
