zsh: update cheatsheets

--- a/zsh/cheatsheets/git-cheat.conf
+++ b/zsh/cheatsheets/git-cheat.conf
@@ -27,3 +27,8 @@ NAME="" EM="" git filter-branch -f --env-filter 'GIT_AUTHOR_NAME="${NAME}"; GIT_
 
 # 上記ですべて変更した場合のbackupを消す
 git update-ref -d refs/original/refs/heads/master
+
+git bisect start bad good
+    git bisect run <script>
+    git bisect good or bad
+git bisect reset
