--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ set-option -g history-limit 20000
 # shell
 set -g default-shell $SHELL
 # Use rettach when use macOS
-set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l ${SHELL}"
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------ ステータスバー ------#
 # ステータスバーの色を設定する
