zsh: update cheetsheet

--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -24,3 +24,4 @@ tar Jxf <*.tar.xz> # xzファイルの解凍
 tar cf - . |lz4 - hoge.tar.lz4 # need `cd path/to/dir`
 lz4 -d hoge.tar.lz4 | tar xf - -C hoge
 rsync -ru --ignore-existing $SRC $DEST
+scp -r [\!.]* board:
