--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,10 @@ set -sg escape-time 0
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
 
+# Enable RGB colour if running in xterm(1)
+# https://stackoverflow.com/questions/41783367/tmux-tmux-true-color-is-not-working-properly
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # 256色端末を使用する
 set -g default-terminal 'xterm-256color'
 
