--- a/alacritty.yml
+++ b/alacritty.yml
@@ -383,3 +383,4 @@ key_bindings:
   - { key: Period,   mods: Alt,       chars: "\x1b."                     } # Alt + .
   - { key: Key8,     mods: Alt|Shift, chars: "\x1b*"                     } # Alt + *
   - { key: Key3,     mods: Alt|Shift, chars: "\x1b#"                     } # Alt + #
+  - { key: Space,    mods: Control,   chars: "\x00"                      }
