zsh: Update cheat sheet

--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -25,3 +25,4 @@ tar cf - . |lz4 - hoge.tar.lz4 # need `cd path/to/dir`
 lz4 -d hoge.tar.lz4 | tar xf - -C hoge
 rsync -ru --ignore-existing $SRC $DEST
 scp -r [\!.]* board:
+stat -c %a /path/to/file       # output file permission by oct format
