linux term color

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,10 +49,10 @@ set -g base-index 1
 
 # Enable RGB colour if running in xterm(1)
 # https://stackoverflow.com/questions/41783367/tmux-tmux-true-color-is-not-working-properly
-set-option -sa terminal-overrides ",xterm*:Tc"
+#set-option -sa terminal-overrides ",xterm*:Tc"
 
 # 256色端末を使用する
-set -g default-terminal 'xterm-256color'
+#set -g default-terminal 'screen-256color'
 
 # バックスクロール行数
 set-option -g history-limit 20000
