zsh: update git cheat

--- a/zsh/cheatsheets/git-cheat.conf
+++ b/zsh/cheatsheets/git-cheat.conf
@@ -6,6 +6,7 @@ git push origin <branch>    # ローカルのブランチをリモートにpush
 git checkout -b <local branch> origin/<remote branch>    # リモートのブランチをとってくる
 git checkout -t origin/<remote branch>                   # リモートのブランチをとってくる
 git reset HEAD hoge/hoge.c; git checkout hoge/hoge.c     # git rmからの復活
+git checkout HEAD -- FILE                                # 同じ名の場合 -- をつける
 git reset Dropbox/**/*~     # 末尾が~のファイルのステージングの取り消し(zsh)
 git rm --cached <filename>  # ローカルのファイルは消さずに管理から外す
 git clean -dfx              # git管理外のファイルはすべて削除
