--- a/tmux.conf
+++ b/tmux.conf
@@ -111,6 +111,8 @@ set -g @tpm_plugins '\
 '
 # Initialize tpm
 run-shell '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.tmux/plugins/yank.tmux'
+
 
 
 #-----  logging -----#
