--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -26,3 +26,4 @@ lz4 -d hoge.tar.lz4 | tar xf - -C hoge
 rsync -ru --ignore-existing $SRC $DEST
 scp -r [\!.]* board:
 stat -c %a /path/to/file       # output file permission by oct format
+socat -d -d pty,raw,echo=0 pty,raw,echo=0 # serial port
