--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -27,3 +27,9 @@ rsync -ru --ignore-existing $SRC $DEST
 scp -r [\!.]* board:
 stat -c %a /path/to/file       # output file permission by oct format
 socat -d -d pty,raw,echo=0 pty,raw,echo=0 # serial port
+
+sed -e 's/$/\r/' inputfile > outputfile                # UNIX to DOS  (adding CRs)
+sed -e 's/\r$//' inputfile > outputfile                # DOS  to UNIX (removing CRs)
+perl -pe 's/\r\n|\n|\r/\r\n/g' inputfile > outputfile  # Convert to DOS
+perl -pe 's/\r\n|\n|\r/\n/g'   inputfile > outputfile  # Convert to UNIX
+perl -pe 's/\r\n|\n|\r/\r/g'   inputfile > outputfile  # Convert to old Mac
