--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ set-option -g history-limit 20000
 # shell
 set -g default-shell $SHELL
 # Use rettach when use macOS
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------ ステータスバー ------#
 # ステータスバーの色を設定する
