--- a/terminator/config
+++ b/terminator/config
@@ -1,5 +1,7 @@
 [global_config]
 [keybindings]
+  next_tab = <Primary>Tab
+  prev_tab = <Primary><Shift>Tab
 [layouts]
   [[default]]
     [[[child1]]]
@@ -13,12 +15,11 @@
   [[default]]
     background_color = "#1d1f21"
     background_darkness = 0.9
-    background_image = None
     background_type = transparent
     copy_on_selection = True
     cursor_blink = False
     cursor_color = "#b3ffff"
-    font = Source Han Code JP 8
+    font = Source Code Pro Medium 10
     foreground_color = "#c5c8c6"
     palette = "#282a2e:#a54242:#8c9440:#de935f:#5d809d:#85678f:#5e8d87:#707880:#373b41:#cc6666:#b5bd68:#f0c674:#80a2be:#b294bb:#8abeb7:#c5c8c6"
     scrollback_infinite = True
@@ -28,7 +29,6 @@
   [[hybrid-reduced-contrast]]
     background_color = "#232c31"
     background_darkness = 0.9
-    background_image = None
     background_type = transparent
     copy_on_selection = True
     cursor_blink = False
