--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # 256色端末を使用する
 #set -g default-terminal 'screen-256color'
 
+set -g bell-action none
+
 # バックスクロール行数
 set-option -g history-limit 20000
 
