--- a/tmux.conf
+++ b/tmux.conf
@@ -89,23 +89,14 @@ set -g status-interval 60
 # set -g visual-activity on
 
 # ウィンドウリストの色を設定する
-setw -g window-status-fg white
-setw -g window-status-bg default
-# setw -g window-status-attr dim
+setw -g window-status-style fg=white,bg=default
 
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg black
-setw -g window-status-current-bg "#87CEFA"
-
-# コマンドラインの色を設定する
-# set -g message-fg white
-# set -g message-bg black
-# set -g message-attr bright
+setw -g window-status-current-style fg=black,bg="#87CEFA"
 
 #------ ペイン ------#
 # ペインボーダーの色を設定する
-set -g pane-border-fg white
-set -g pane-border-bg black
+set -g pane-border-style fg=white,bg=black
 # アクティブなペインを目立たせる
 # set -g pane-active-border-fg white
 # set -g pane-active-border-bg green
