tmux: Update keybind

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,11 +12,11 @@ bind p paste-buffer
 bind C-Space copy-mode
 
 # clear history
-bind C-\ clear-history
+bind 'C-\' clear-history
 
 # \ でペインを縦分割 - でペインを横分割
-bind \ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
+bind '-' split-window -v -c "#{pane_current_path}"
 
 # new window 同じディレクトリで開く
 bind c new-window -c "#{pane_current_path}"
